[project]
name = "clonevoice"
version = "0.1.0"
description = "語音克隆應用：上傳語音，輸入文字，產生克隆語音"
requires-python = ">=3.13"
dependencies = [
    "mlx-audio>=0.2.0",
    "gradio>=5.0",
    "soundfile>=0.13.0",
    "numpy>=1.26",
    "librosa>=0.10",
    "mlx-whisper>=0.4.0",
]

[project.scripts]
clonevoice = "clonevoice.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clonevoice"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
